First Version Finished

--- a/index.html
+++ b/index.html
@@ -12,23 +12,38 @@
     <div class="box page">
         <div class="box watcher">
             <div class="box time-unit">
-                <p class="time-unit__digits">00</p>
-                <span class="time-unit__label">days</span>
+                <div class="box-digits">
+                    <p id="days" class="box time-unit__digits">00</p>
+                    <p id="days-b" class="box time-unit__digits">00</p>
+                </div>
+                <span class="box time-unit__label">days</span>
             </div>
             <div class="box time-unit">
-                <p class="time-unit__digits">00</p>
-                <span class="time-unit__label">hours</span>
+                <div class="box-digits">
+                    <p id="hours" class="box time-unit__digits">00</p>
+                    <p id="hours-b" class="box time-unit__digits">00</p>
+                </div>
+                <span class="box time-unit__label">hours</span>
             </div>
             <div class="box time-unit">
-                <p class="time-unit__digits">00</p>
-                <span class="time-unit__label">minutes</span>
+                <div class="box-digits">
+                    <p id="minutes" class="box time-unit__digits">00</p>
+                    <p id="minutes-b" class="box time-unit__digits">00</p>
+                </div>
+                <span class="box time-unit__label">minutes</span>
             </div>
             <div class="box time-unit">
-                <p class="time-unit__digits">00</p>
-                <span class="time-unit__label">seconds</span>
+                <div class="box-digits">
+                    <p id="seconds" class="box time-unit__digits">00</p>
+                    <p id="seconds-b" class="box time-unit__digits">00</p>
+                </div>
+                <span class="box time-unit__label">seconds</span>
             </div>
         </div>
     </div>
+
+    <script src="./script.js"></script>
+    <noscript>Please, Enable Javascript to view this page</noscript>
 
 </body>
 </html>
